--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                     <h3>Oil Spill Response Equipment Supply</h3>
                     <p>We provide a wide range of high-quality oil spill response equipment to ensure swift action in case of emergencies.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class="btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 2 -->
@@ -278,7 +278,7 @@
                     </div>
                     <h3>Response Services</h3>
                     <p>Our team offers expert response services to manage and mitigate oil spill incidents effectively.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 3 -->
@@ -289,7 +289,7 @@
                     </div>
                     <h3>Equipment Hire</h3>
                     <p>We offer a variety of equipment for hire to support oil spill response and other emergency operations.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 4 -->
@@ -300,7 +300,7 @@
                     </div>
                     <h3>Personnel Support</h3>
                     <p>Our skilled personnel are available to support all aspects of oil spill response and environmental management.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 5 -->
@@ -311,7 +311,7 @@
                     </div>
                     <h3>Emergency Preparedness Exercises & Drills</h3>
                     <p>We conduct regular preparedness exercises and drills to ensure readiness for any oil spill emergency.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 6 -->
@@ -322,7 +322,7 @@
                     </div>
                     <h3>Consultancy</h3>
                     <p>We provide expert consultancy services for oil spill preparedness, response planning, and environmental compliance.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 7 -->
@@ -333,7 +333,7 @@
                     </div>
                     <h3>IMO Level Training</h3>
                     <p>Our training programs meet international standards, preparing your team for effective oil spill response.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
             <!-- Service 8 -->
@@ -344,7 +344,7 @@
                     </div>
                     <h3>Procurement</h3>
                     <p>We offer procurement services for a wide range of oil spill response and environmental protection products.</p>
-                    <button class="btn btn-read-more">Read More</button>
+                    <button class=" btn-read-more">Read More</button>
                 </div>
             </div>
         </div>
