--- a/ancillaries.html
+++ b/ancillaries.html
@@ -110,7 +110,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -124,9 +124,22 @@
                             <li><a class="dropdown-item" href="#">Response Service</a></li>
                             <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="#">Personnel Support</a></li>
-                            <li><a class="dropdown-item" href="#">Consultancy</a></li>
-                            <li><a class="dropdown-item" href="#">IMO Level Training</a></li>
-                            <li><a class="dropdown-item" href="#">Procurement</a></li>
+                            <li>
+                            <a class="dropdown-item" href="#">Consultancy</a></li>
+                            <a class="dropdown-item" href="#">IMO Level Training</a></li>
+                            <a class="dropdown-item" href="#">Procurement</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPrinciples" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            General Business Principles
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
+                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
+                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
+                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
+                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
+                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -139,6 +152,7 @@
             </div>
         </div>
     </nav>
+    
     
     <!-- Hero Section -->
     <section class="hero-section">
