--- a/workboats.html
+++ b/workboats.html
@@ -266,13 +266,11 @@
                             General Business Principles
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Oil Spill Response</a></li>
-                            <li><a class="dropdown-item" href="#">Response Services</a></li>
-                            <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
-                            <li><a class="dropdown-item" href="#">Personnel Support</a></li>
-                            <li><a class="dropdown-item" href="#">Emmergency Preparedness</a></li>
-                            <li><a class="dropdown-item" href="#">Consultancy</a></li>
-                            <li><a class="dropdown-item" href="#">Procurement</a></li>
+                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
+                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
+                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
+                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
+                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -285,6 +283,7 @@
             </div>
         </div>
     </nav>
+    
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
