--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                             General Business Principles
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Oil Spill Response</a></li>
-                            <li><a class="dropdown-item" href="#">Response Services</a></li>
-                            <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
+                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
+                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
+                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
+                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
+                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
