--- a/oilskimmers.html
+++ b/oilskimmers.html
@@ -97,7 +97,6 @@
     </style>
 </head>
 <body>
-
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Samdus</a>
@@ -132,13 +131,11 @@
                             General Business Principles
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Oil Spill Response</a></li>
-                            <li><a class="dropdown-item" href="#">Response Services</a></li>
-                            <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
-                            <li><a class="dropdown-item" href="#">Personnel Support</a></li>
-                            <li><a class="dropdown-item" href="#">Emmergency Preparedness</a></li>
-                            <li><a class="dropdown-item" href="#">Consultancy</a></li>
-                            <li><a class="dropdown-item" href="#">Procurement</a></li>
+                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
+                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
+                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
+                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
+                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -151,6 +148,7 @@
             </div>
         </div>
     </nav>
+    
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
