--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </div>
                     <h3>Equipment Hire</h3>
                     <p>We offer a variety of equipment for hire to support oil spill response and other emergency operations.</p>
-                    <button class=" btn-read-more">Read More</button>
+                    <a href="equipementhire.html" class=" btn-read-more">Read More</a>
                 </div>
             </div>
             <!-- Service 4 -->
@@ -309,7 +309,7 @@
                     </div>
                     <h3>Personnel Support</h3>
                     <p>Our skilled personnel are available to support all aspects of oil spill response and environmental management.</p>
-                    <button class=" btn-read-more">Read More</button>
+                    <a href="personnelsupp.html" class=" btn-read-more">Read More</a>
                 </div>
             </div>
             <!-- Service 5 -->
