--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <p class="hero-subtitle">INNOVATION IN ENERGY</p>
                         <h1 class="hero-title">Leading the Future of Oil & Gas</h1>
                         <p class="hero-description">At Samdus, we are at the forefront of the oil and gas industry, delivering cutting-edge solutions and sustainable practices. From advanced drilling technologies to eco-friendly energy initiatives, we are committed to excellence and innovation in every project.</p>
-                        <a href="#projects" class="btn-link">
-                            <span>EXPLORE OUR PROJECTS</span>
+                        <a href="productoverview.html" class="btn-link">
+                            <span>EXPLORE OUR PRODUCTS</span>
                         </a>
 
                         
