--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <p class="hero-subtitle">INNOVATION IN ENERGY</p>
                         <h1 class="hero-title">Leading the Future of Oil & Gas</h1>
                         <p class="hero-description">At Samdus, we are at the forefront of the oil and gas industry, delivering cutting-edge solutions and sustainable practices. From advanced drilling technologies to eco-friendly energy initiatives, we are committed to excellence and innovation in every project.</p>
-                        <a href="productoverview.html" class="btn-link">
-                            <span>EXPLORE OUR PRODUCTS</span>
+                        <a href="#welcome" class="btn-link">
+                            <span>EXPLORE OUR PROJECTS</span>
                         </a>
 
                         
@@ -107,7 +107,7 @@
                 </div>
                 
                 <!-- Right Side: Content -->
-                <div class="col-md-6 content-container slide-up">
+                <div class="col-md-6 content-container slide-up" id="welcome">
                     <h2><b>Welcome To Samdus</b></h2>
                     <p>SAMDUS is a private and wholly owned Nigerian oilfield Services Company. Although incorporated in 2012, the company was founded by Nigerians with an extensive track record, market-leading insight, and experience in the Nigerian oil & gas industry. We currently operate only in Nigeria and are dedicated to our partners and communities through our enduring commitment and sustainability program.</p>
                     <p>Samdus is a global leader in the oil and gas industry, dedicated to advancing energy solutions that are both sustainable and efficient. With decades of experience and a commitment to innovation, we are shaping the future of energy.</p>
