--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <span>Tanks</span>
                     </a>
                 </div>
-                <div class="grid-item fade-in" style="background-image: url('https://img.freepik.com/free-photo/steel-pipelines-cables-plant_1359-145.jpg?t=st=1724645560~exp=1724649160~hmac=14e051d15bf61c07e8155fdf9284528300b1ba20137e5ba40e153a4d2f8edb2b&w=740');">
+                <div class="grid-item fade-in" style="background-image: url('static/images/trailervacuumsystem.jpg');">
                     <a href="vacuumsystem.html" class="overlay">
                         <span>Vacuum Systems</span>
                     </a>
