--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="grid-item fade-in" style="background-image: url('static/images/Ancillaries.webp');">
-                    <a href="#" class="overlay">
+                    <a href="ancillaries.html" class="overlay">
                         <span>Ancillaries</span>
                     </a>
                 </div>
