--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownServices">
-                            <li><a class="dropdown-item" href="#">Oil Spill Response Equipment Supply</a></li>
-                            <li><a class="dropdown-item" href="#">Response Service</a></li>
-                            <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
-                            <li><a class="dropdown-item" href="#">Personnel Support</a></li>
+                            <li><a class="dropdown-item" href="oilspillresponse.html">Oil Spill Response Equipment Supply</a></li>
+                            <li><a class="dropdown-item" href="respservices.html">Response Service</a></li>
+                            <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
+                            <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
                             <a class="dropdown-item" href="#">Consultancy</a></li>
                             <a class="dropdown-item" href="#">IMO Level Training</a></li>
