--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServices" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,17 +48,8 @@
                             <a class="dropdown-item" href="">Procurement</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPrinciples" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            General Business Principles
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
-                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
-                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
-                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
-                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#product">Products</a>
@@ -342,7 +333,7 @@
                     </div>
                     <h3>IMO Level Training</h3>
                     <p>Our training programs meet international standards, preparing your team for effective oil spill response.</p>
-                    <button class=" btn-read-more">Read More</button>
+                    <a href="imotrainlvl.html" class=" btn-read-more">Read More</a>
                 </div>
             </div>
             <!-- Service 8 -->
@@ -353,7 +344,7 @@
                     </div>
                     <h3>Procurement</h3>
                     <p>We offer procurement services for a wide range of oil spill response and environmental protection products.</p>
-                    <button class=" btn-read-more">Read More</button>
+                    <a href="procurement.html" class=" btn-read-more">Read More</a>
                 </div>
             </div>
         </div>
@@ -522,7 +513,7 @@
             </div>
         </footer>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
