new changes added

--- a/workboats.html
+++ b/workboats.html
@@ -232,9 +232,10 @@
     </style>
 </head>
 <body>
+     
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Samdus</a>
+            <a class="navbar-brand" href="index.html">Samdus</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -244,40 +245,31 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServices" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownServices">
-                            <li><a class="dropdown-item" href="#">Oil Spill Response Equipment Supply</a></li>
-                            <li><a class="dropdown-item" href="#">Response Service</a></li>
-                            <li><a class="dropdown-item" href="#">Equipment Hire</a></li>
-                            <li><a class="dropdown-item" href="#">Personnel Support</a></li>
+                            <li><a class="dropdown-item" href="oilspillresponse.html">Oil Spill Response Equipment Supply</a></li>
+                            <li><a class="dropdown-item" href="respservices.html">Response Service</a></li>
+                            <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
+                            <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
-                            <a class="dropdown-item" href="#">Consultancy</a></li>
-                            <a class="dropdown-item" href="#">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="#">Procurement</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPrinciples" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            General Business Principles
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
-                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
-                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
-                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
-                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
+                            <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
+                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <a class="dropdown-item" href="">Procurement</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#product">Products</a>
+                        <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="productoverview.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
