--- a/consultancy.html
+++ b/consultancy.html
@@ -20,9 +20,10 @@
 <body>
 
     
+   
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Samdus</a>
+            <a class="navbar-brand" href="index.html">Samdus</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServices" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,28 +45,19 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
-                            <a class="dropdown-item" href="#">Consultancy</a></li>
-                            <a class="dropdown-item" href="#">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="#">Procurement</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPrinciples" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            General Business Principles
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrinciples">
-                            <li><a class="dropdown-item" href="#">Sustainable Development</a></li>
-                            <li><a class="dropdown-item" href="#">Responsibility</a></li>
-                            <li><a class="dropdown-item" href="#">Business Integrity</a></li>
-                            <li><a class="dropdown-item" href="#">Community Engagement</a></li>
-                            <li><a class="dropdown-item" href="#">Cash Policies</a></li>
+                            <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
+                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <a class="dropdown-item" href="">Procurement</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#product">Products</a>
+                        <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="productoverview.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -304,7 +296,7 @@
             </div>
         </footer>
     </div>
-    
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
