samdus logo added

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Samdus</a>
+            <a class="navbar-brand" href="index.html" aria-label="Samdus Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -169,8 +169,8 @@
                 <!-- Footer Content -->
                 <div class="row mt-5">
                     <!-- Samdus Logo -->
-                    <div class="col-12 text-center mb-4">
-                        <img src="static/images/samdus-logo.png" alt="Samdus Logo" class="footer-logo">
+                    <div class="col-12 text-center mb-3 logo">
+                        <img src="static/images/logo/samdus_white.png" alt="Samdus Logo" class="footer-logo">
                     </div>
     
                    
