--- a/emergencyprep.html
+++ b/emergencyprep.html
@@ -211,9 +211,10 @@
                 <!-- Footer Content -->
                 <div class="row mt-5">
                     <!-- Samdus Logo -->
-                    <div class="col-12 text-center mb-4">
-                        <img src="static/images/samdus-logo.png" alt="Samdus Logo" class="footer-logo">
+                    <div class="col-12 text-center mb-3 logo">
+                        <img src="static/images/logo/samdus_white.png" alt="Samdus Logo" class="footer-logo">
                     </div>
+    
     
                     <!-- Address and Contact Information -->
                     <div class="row mt-4 mb-4">
