--- a/personnelsupp.html
+++ b/personnelsupp.html
@@ -22,7 +22,7 @@
        
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Samdus</a>
+            <a class="navbar-brand" href="index.html" aria-label="Samdus Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -112,10 +112,10 @@
                     </div>
                     <div class="image-row">
                         <div class="image-medium fade-in">
-                            <img src="static/images/oilpersonnel.jpg" alt="Rapid Response Team" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/images/oil-and-gas-job-1.jpg" alt="Rapid Response Team" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                         <div class="image-small fade-in">
-                            <img src="static/images/oilpersonnel3.jpg" alt="Environmental Management" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/images/Nigeria-crude-oil-2.webp" alt="Environmental Management" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                     </div>
                     <div class="image-row">
@@ -123,7 +123,7 @@
                             <img src="static/images/oilpersonnel5.jpg" alt="Training Session" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                         <div class="image-small fade-in">
-                            <img src="static/images/5.jpg" alt="Consulting Experts" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/images/Ghanas-Petroleum-Sector.jpg" alt="Consulting Experts" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                 <!-- Service 1: Oil Spill Response Personnel -->
                 <div class="col-md-4 text-center fade-in">
                     <div class="service-card p-4 shadow-sm">
-                        <img src="static/images/oilpersonnel4.jpg" alt="Oil Spill Response Personnel" class="img-fluid mb-4 rounded">
+                        <img src="static/images/Nigeria-crude-oil-2.webp" alt="Oil Spill Response Personnel" class="img-fluid mb-4 rounded">
                         <h3 class="mb-3">Oil Spill Response Personnel</h3>
                         <p>Highly trained and experienced response teams capable of rapid deployment for effective containment and recovery operations.</p>
                     </div>
@@ -165,7 +165,7 @@
                 <!-- Service 2: Environmental Monitoring -->
                 <div class="col-md-4 text-center fade-in">
                     <div class="service-card p-4 shadow-sm">
-                        <img src="static/images/desmi-boulder-cleaner.webp" alt="Environmental Monitoring" class="img-fluid mb-4 rounded">
+                        <img src="static/images/oil-and-gas-job-1.jpg" alt="Environmental Monitoring" class="img-fluid mb-4 rounded">
                         <h3 class="mb-3">Environmental Monitoring</h3>
                         <p>Our environmental scientists provide on-site monitoring services to assess the ecological impact of spills and ensure regulatory compliance.</p>
                     </div>
@@ -189,8 +189,8 @@
                 <!-- Footer Content -->
                 <div class="row mt-5">
                     <!-- Samdus Logo -->
-                    <div class="col-12 text-center mb-4">
-                        <img src="static/images/samdus-logo.png" alt="Samdus Logo" class="footer-logo">
+                    <div class="col-12 text-center mb-3 logo">
+                        <img src="static/images/logo/samdus_white.png" alt="Samdus Logo" class="footer-logo">
                     </div>
     
                     <!-- Address and Contact Information -->
