samdus logo added

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
           <!-- Contact form -->
           <div class="screen-body-item" data-aos="fade-left">
             <div class="app-form">
-                <form id="contactForm" action="https://formsubmit.co/carryoby@gmail.com" method="POST">
+                <form id="contactForm" action="https://formsubmit.co/hycinth@samdus.com" method="POST">
                     <input type="hidden" name="_captcha" value="false">
                     <div class="app-form-group">
                       <input class="app-form-control" type="text" name="name" placeholder="Your Name" required>
@@ -135,7 +135,7 @@
         <p><strong>Head Office:</strong> 1st Floor, Imperial Plaza, 129/131 Olu Obasanjo Road, Port Harcourt, Rivers State, Nigeria</p>
         <p><strong>Lagos Office:</strong> 5th Floor, God’s Grace Plaza, 63 Allen Avenue, Ikeja, Lagos, Nigeria</p>
         <p><strong>Abuja Office:</strong> Suite D31C, Platinum Mega Mall, Jahi, Abuja, FCT, Nigeria</p>
-        <p><strong>Need Support?</strong> Email us at <a href="mailto:info@samdus.com">info@samdus.com</a></p>
+        <p><strong>Need Support?</strong> Email us at <a href="mailto:hycinth@samdus.com">hycinth@samdus.com</a></p>
       </div>
     </div>
   </section>  
