--- a/pumps.html
+++ b/pumps.html
@@ -200,7 +200,7 @@
                                 1st Floor, Imperial Plaza<br>
                                 129/131 Olu Obasanjo Road,<br>
                                 Port Harcourt, Rivers State, Nigeria<br>
-                                <a href="tel:+2348093932091" class="text-white">+234 809 393 2091</a>
+                                <a href="tel:+2348093932091" class="text-white">+234 817 308 7372</a>
                             </div>
                             <div class="address col-md">
                                 <strong>Lagos Office:</strong><br>
@@ -212,11 +212,11 @@
                                 <strong>Abuja Office:</strong><br>
                                 Suite D31C, Platinum Mega Mall<br>
                                 Jahi, Abuja, FCT, Nigeria<br>
-                                <a href="tel:+2348093931793" class="text-white">+234 809 393 1793</a>
+                                <a href="tel:+2348093931793" class="text-white">+234 817 721 8352</a>
                             </div>
                             <div class="address col-md">
                                 <p>Need Support?</p>
-                                <strong><p><a href="mailto:info@samdus.com" class="text-white mail">info@samdus.com</a></p></strong>
+                                <strong><p><a href="mailto:hycinth@samdus.com" class="text-white mail">hycinth@samdus.com</a></p></strong>
                             </div>
                         </div>
                     
