--- a/ancillaries.html
+++ b/ancillaries.html
@@ -262,7 +262,7 @@
     
     
                     <!-- Address and Contact Information -->
-                    <div class="row mt-4 mb-4">
+                    <div class="row mt-4 mb-4 display-footer">
                         <div class="footer-addresses col-md">
                             <div class="address">
                                 <strong>Head Office:</strong><br>
