--- a/workboats.html
+++ b/workboats.html
@@ -201,6 +201,10 @@
     .cta-section {
         padding: 40px 20px;
     }
+
+    .display-footer{
+        display: none;
+    }
 }
 
 @media (max-width: 576px) {
@@ -227,6 +231,10 @@
 
     .investor-insights-content p {
         font-size: 1rem;
+    }
+
+    .display-footer{
+        display: none;
     }
 }
     </style>
@@ -386,7 +394,7 @@
     
     
                     <!-- Address and Contact Information -->
-                    <div class="row mt-4 mb-4">
+                    <div class="row mt-4 mb-4 display-footer">
                         <div class="footer-addresses col-md">
                             <div class="address">
                                 <strong>Head Office:</strong><br>
