--- a/index.html
+++ b/index.html
@@ -2,20 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samdus - Leading in Oil & Gas Innovation</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- AOS Library CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <!-- Custom CSS -->
-   <link rel="stylesheet" href="main.css">
+<!-- Meta Tags -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- SEO Meta Tags -->
+<title>Samdus - Leading in Oil & Gas Innovation</title>
+<meta name="description" content="Samdus is at the forefront of the oil and gas industry, delivering cutting-edge solutions and sustainable practices. Discover our advanced technologies and commitment to excellence.">
+<meta name="keywords" content="Samdus, Oil and Gas, Energy Solutions, Sustainable Practices, Innovation, Oil Spill Response, Energy Industry">
+
+<!-- Open Graph Meta Tags for Social Media Sharing -->
+<meta property="og:title" content="Samdus - Leading in Oil & Gas Innovation">
+<meta property="og:description" content="Samdus delivers cutting-edge solutions and sustainable practices in the oil and gas industry.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.samdus.com/"> <!-- Replace with your actual URL -->
+<meta property="og:image" content="https://www.samdus.com/static/images/logo/samdus logo.png"> <!-- Replace with your actual image URL -->
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Samdus - Leading in Oil & Gas Innovation">
+<meta name="twitter:description" content="Samdus delivers cutting-edge solutions and sustainable practices in the oil and gas industry.">
+<meta name="twitter:image" content="https://www.samdus.com/static/images/logo/samdus logo.png"> <!-- Replace with your actual image URL -->
+
+<!-- Canonical Link -->
+<link rel="canonical" href="https://www.samdus.com/"> <!-- Replace with your actual URL -->
+
+<!-- Favicon -->
+<link rel="icon" href="static/images/logo/samdus logo.png" type="image/x-icon"> <!-- Replace with your actual favicon path -->
+
+<!-- CSS and Fonts -->
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- Font Awesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+<!-- AOS Library CSS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+<!-- Custom CSS -->
+<link rel="stylesheet" href="main.css">
+
 
 </head>
 <body>
