new changes added

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                             <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
                             <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="">Procurement</a></li>
+                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -99,7 +99,7 @@
           <!-- Contact form -->
           <div class="screen-body-item" data-aos="fade-left">
             <div class="app-form">
-                <form id="contactForm" action="https://formsubmit.co/hycinth@samdus.com" method="POST">
+                <form id="contactForm" action="https://formsubmit.co/info@samdus.com" method="POST">
                     <input type="hidden" name="_captcha" value="false">
                     <div class="app-form-group">
                       <input class="app-form-control" type="text" name="name" placeholder="Your Name" required>
@@ -132,13 +132,16 @@
     <div class="address-wrapper">
       <div class="address-content" data-aos="fade-up">
         <h2>OUR OFFICES</h2>
-        <p><strong>Head Office:</strong> 1st Floor, Imperial Plaza, 129/131 Olu Obasanjo Road, Port Harcourt, Rivers State, Nigeria</p>
-        <p><strong>Lagos Office:</strong> 5th Floor, God’s Grace Plaza, 63 Allen Avenue, Ikeja, Lagos, Nigeria</p>
+        <p><strong>Head Office:</strong> 48 Wogu Street, D'Lin, Port Harcourt, Rivers State, Nigeria</p>
+        <p><strong>Lagos Office:</strong> 18B Babatunde Ladega Street, Omole Ikeja, Lagos, Nigeria</p>
         <p><strong>Abuja Office:</strong> Suite D31C, Platinum Mega Mall, Jahi, Abuja, FCT, Nigeria</p>
-        <p><strong>Need Support?</strong> Email us at <a href="mailto:hycinth@samdus.com">hycinth@samdus.com</a></p>
+        <p><strong>Need Support?</strong> Email us at <a href="mailto:info@samdus.com">info@samdus.com</a></p>
+        <p> Call us at <a href="tel:+2349034469608">+234 903 446 9608</a></p>
       </div>
     </div>
   </section>  
+
+
 
   <section class="map-section">
     <div class="map-wrapper">
