new changes added

--- a/operationexe.html
+++ b/operationexe.html
@@ -66,7 +66,7 @@
     <section class="hero-section">
         <div class="hero-overlay"></div>
         <div class="container hero-content text-center">
-            <p data-aos="fade-up" class="hero-subtitle">INNOVATION IN ENERGY</p>
+            <p data-aos="fade-up" class="hero-subtitle">INNOVATION IN SERVICES</p>
             <h1 data-aos="fade-up" class="hero-title">Operational Excellence</h1>
             <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil and Gas Limited, we strive for operational excellence through innovation, technology, and a relentless commitment to safety, efficiency, and sustainability in every project.</p>
         </div>
