--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <div class="hero-overlay"></div>
     <div class="container hero-content text-center">
         <p data-aos="fade-up" class="hero-subtitle">INNOVATION DRIVES US</p>
-        <h1 data-aos="fade-up" class="hero-title">Operational Excellence</h1>
+        <h1 data-aos="fade-up" class="hero-title">About Us</h1>
         <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we redefine services through cutting-edge technologies, sustainable practices, and a relentless pursuit of operational excellence, ensuring a secure energy future for all.</p>
     </div>
     <div class="scroll-indicator" data-aos="fade-down">
