--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
                         <div class="col-md-6">
                             <!-- Footer Links -->
                             <ul class="list-inline mt-3">
-                                <li class="list-inline-item"><a href="#" class="text-white">Privacy Policy</a></li>
+                                <li class="list-inline-item"><a href="operationexe.html" class="text-white">Saftey Policy</a></li>
                                 <li class="list-inline-item"><a href="#" class="text-white">Terms of Service</a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white">Contact Us</a></li>
+                                <li class="list-inline-item"><a href="contact.html" class="text-white">Contact Us</a></li>
                             </ul>
                     </div>
 
