--- a/about.html
+++ b/about.html
@@ -64,9 +64,9 @@
 <section class="hero-section">
     <div class="hero-overlay"></div>
     <div class="container hero-content text-center">
-        <p data-aos="fade-up" class="hero-subtitle">INNOVATION DRIVES US</p>
+        <p data-aos="fade-up" class="hero-subtitle">OUR STORY, OUR VISION</p>
         <h1 data-aos="fade-up" class="hero-title">About Us</h1>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we redefine services through cutting-edge technologies, sustainable practices, and a relentless pursuit of operational excellence, ensuring a secure energy future for all.</p>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we are committed to powering the future through innovation and sustainability. With cutting-edge technologies and a dedication to operational excellence, we strive to deliver energy solutions that meet the world’s evolving needs while ensuring a responsible and secure energy future.</p>
     </div>
     <div class="scroll-indicator" data-aos="fade-down">
         <i class="fas fa-chevron-down"></i>
