--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,10 @@
 <section class="hero-section">
     <div class="hero-overlay"></div>
     <div class="container hero-content text-center">
-        <p data-aos="fade-up" class="hero-subtitle">INNOVATION DRIVES US</p>
-        <h1 data-aos="fade-up" class="hero-title">Operational Excellence</h1>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we redefine energy through cutting-edge technologies, sustainable practices, and a relentless pursuit of operational excellence, ensuring a secure energy future for all.</p>
+        <p data-aos="fade-up" class="hero-subtitle">WE’D LOVE TO HEAR FROM YOU</p>
+        <h1 data-aos="fade-up" class="hero-title">Get in Touch</h1>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">Whether you have questions about our services, need more information, or want to explore partnership opportunities, the team at Samdus Oil & Gas is here to help. Reach out to us today, and let’s work together to shape the future of energy.</p>
     </div>
-
 </section>
 
 <!-- Contact Section with Form and Address -->
