--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#product">Products</a>
+                        <a class="nav-link" href="productoverview.html">Equipments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -60,12 +60,12 @@
 <section class="hero-section">
     <div class="hero-overlay"></div>
     <div class="container hero-content text-center">
-        <p data-aos="fade-up" class="hero-subtitle">INNOVATION DRIVES US</p>
-        <h1 data-aos="fade-up" class="hero-title">Operational Excellence</h1>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we redefine energy through cutting-edge technologies, sustainable practices, and a relentless pursuit of operational excellence, ensuring a secure energy future for all.</p>
+        <p data-aos="fade-up" class="hero-subtitle">WE’D LOVE TO HEAR FROM YOU</p>
+        <h1 data-aos="fade-up" class="hero-title">Get in Touch</h1>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">Whether you have questions about our services, need more information, or want to explore partnership opportunities, the team at Samdus Oil & Gas is here to help. Reach out to us today, and let’s work together to shape the future of energy.</p>
     </div>
-
 </section>
+
 
 <!-- Contact Section with Form and Address -->
 <section class="contact-section">
@@ -183,7 +183,7 @@
                             <!-- Footer Links -->
                             <ul class="list-inline mt-3">
                                 <li class="list-inline-item"><a href="operationexe.html" class="text-white">Saftey Policy</a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white">Terms of Service</a></li>
+                                <li class="list-inline-item"><a href="terms.html" class="text-white">Terms of Service</a></li>
                                 <li class="list-inline-item"><a href="contact.html" class="text-white">Contact Us</a></li>
                             </ul>
                     </div>
