--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Products</a>
+                        <a class="nav-link" href="productoverview.html">Equipments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -233,7 +233,7 @@
                             <!-- Footer Links -->
                             <ul class="list-inline mt-3">
                                 <li class="list-inline-item"><a href="operationexe.html" class="text-white">Saftey Policy</a></li>
-                                <li class="list-inline-item"><a href="#" class="text-white">Terms of Service</a></li>
+                                <li class="list-inline-item"><a href="terms.html" class="text-white">Terms of Service</a></li>
                                 <li class="list-inline-item"><a href="contact.html" class="text-white">Contact Us</a></li>
                             </ul>
                     </div>
