--- a/operationexe.html
+++ b/operationexe.html
@@ -154,12 +154,12 @@
                         <h2>Innovation and Sustainability</h2>
                         <p>At the core of our operations is a strong focus on sustainability and innovation. We continuously explore new ways to minimize our environmental footprint while maximizing operational efficiency. Our sustainability initiatives include the integration of renewable energy sources, waste reduction strategies, and water conservation efforts. By fostering a culture of innovation, we are driving forward-thinking solutions that support a sustainable future for the oil and gas industry.</p>
                         <div class="stat-card" data-aos="fade-up" data-aos-delay="300">
-                            <h3 class="percent">95%</h3>
-                            <p>Operational Efficiency Achieved</p>
+                            
+                            <strong><p>Operational Efficiency Achieved</p></strong>
                         </div>
                         <div class="stat-card" data-aos="fade-up" data-aos-delay="500">
-                            <h3 class="percent">80%</h3>
-                            <p>Reduction in Carbon Emissions</p>
+                            
+                           <strong> <p>Reduction in Carbon Emissions</p></strong>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <div class="col-md-6">
                             <!-- Footer Links -->
                             <ul class="list-inline mt-3">
-                                <li class="list-inline-item"><a href="operationexe.html" class="text-white">Saftey Policy</a></li>
+                                <li class="list-inline-item"><a href="operationexe.html" class="text-white">Safety Policy</a></li>
                                 <li class="list-inline-item"><a href="terms.html" class="text-white">Terms of Service</a></li>
                                 <li class="list-inline-item"><a href="contact.html" class="text-white">Contact Us</a></li>
                             </ul>
