--- a/workboats.html
+++ b/workboats.html
@@ -428,7 +428,7 @@
                         <div class="col-md-6">
                             <!-- Footer Links -->
                             <ul class="list-inline mt-3">
-                                <li class="list-inline-item"><a href="operationexe.html" class="text-white">Saftey Policy</a></li>
+                                <li class="list-inline-item"><a href="operationexe.html" class="text-white">Safety Policy</a></li>
                                 <li class="list-inline-item"><a href="terms.html" class="text-white">Terms of Service</a></li>
                                 <li class="list-inline-item"><a href="contact.html" class="text-white">Contact Us</a></li>
                             </ul>
